Add MainViewModel Add MainView Add MainModel

--- a/ricaun.Revit.Mvvm.Example/ricaun.Revit.Mvvm.Example.csproj
+++ b/ricaun.Revit.Mvvm.Example/ricaun.Revit.Mvvm.Example.csproj
@@ -138,4 +138,8 @@
     <ProjectReference Include="..\ricaun.Revit.Mvvm\ricaun.Revit.Mvvm.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
