--- a/ricaun.Revit.Mvvm.Example/ricaun.Revit.Mvvm.Example.csproj
+++ b/ricaun.Revit.Mvvm.Example/ricaun.Revit.Mvvm.Example.csproj
@@ -117,7 +117,6 @@
   <ItemGroup>
     <PackageReference Include="ricaun.Revit.UI" Version="*" />
   </ItemGroup>
-
   <!-- Fody -->
   <ItemGroup>
     <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" IncludeAssets="compile; build" PrivateAssets="all" />
@@ -139,7 +138,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Compile Update="Properties\Resource.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
