Update Develop Sign

--- a/.github/workflows/Develop.yml
+++ b/.github/workflows/Develop.yml
@@ -23,3 +23,5 @@ jobs:
         run: ./build/build.cmd --root ./build
         env:
           GitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          SignFile: ${{ secrets.SIGN_FILE }}
+          SignPassword: ${{ secrets.SIGN_PASSWORD }}
