--- a/ricaun.Revit.Mvvm.Example/ricaun.Revit.Mvvm.Example.csproj
+++ b/ricaun.Revit.Mvvm.Example/ricaun.Revit.Mvvm.Example.csproj
@@ -119,7 +119,7 @@
   </ItemGroup>
   <!-- Fody -->
   <ItemGroup>
-    <PackageReference Include="PropertyChanged.Fody" Version="3.*" IncludeAssets="compile; build" PrivateAssets="all" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.*" PrivateAssets="all"/>
   </ItemGroup>
   <PropertyGroup>
     <WeaverConfiguration>
