--- a/ricaun.Revit.Mvvm/ricaun.Revit.Mvvm.csproj
+++ b/ricaun.Revit.Mvvm/ricaun.Revit.Mvvm.csproj
@@ -141,9 +141,10 @@
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
+  
   <!-- Fody -->
   <ItemGroup>
-    <PackageReference Include="PropertyChanged.Fody" Version="3.*" IncludeAssets="compile; build" PrivateAssets="all" />
+    <PackageReference Include="PropertyChanged.Fody" Version="3.*" PrivateAssets="all" />
   </ItemGroup>
   <PropertyGroup>
     <WeaverConfiguration>
